--- a/dev/assets/documenter.css
+++ b/dev/assets/documenter.css
@@ -170,8 +170,10 @@ nav.toc {
     left: 0;
     bottom: 0;
     width: 20em;
+    display: flex;
+    flex-flow: column nowrap;
     overflow-y: auto;
-    padding: 1em 0;
+    padding: 1em 0 0 0;
     background-color: #fcfcfc;
     box-shadow: inset -14px 0px 5px -12px rgb(210,210,210);
 }
@@ -192,6 +194,7 @@ nav.toc h1 {
 nav.toc select {
     display: block;
     height: 2em;
+    flex-shrink: 0;
     padding: 0 1.6em 0 1em;
     min-width: 7em;
     max-width: 90%;
@@ -237,6 +240,16 @@ nav.toc input {
 
 nav.toc > ul * {
     margin: 0;
+}
+
+nav.toc > ul {
+    min-height: 2em;
+    overflow-y: auto;
+    margin: 0;
+}
+
+nav.toc > ul > li:last-child {
+    padding-bottom: 1em;
 }
 
 nav.toc ul {
@@ -303,6 +316,21 @@ nav.toc li.current > .toctext {
     color: #404040;
     font-weight: bold;
     background-color: white;
+}
+
+nav.toc ul::-webkit-scrollbar {
+    width: .4em;
+    background: none;
+}
+
+nav.toc ul::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background: #c9c9c9;
+}
+
+nav.toc ul::-webkit-scrollbar-thumb:hover {
+    border-radius: 5px;
+    background: #aaaaaa;
 }
 
 article {
@@ -474,7 +502,6 @@ article section.docstring a.source-link {
 @media only screen and (max-width: 768px) {
     nav.toc {
         position: fixed;
-        overflow-y: scroll;
         width: 16em;
         left: -16em;
         -webkit-overflow-scrolling: touch;
@@ -485,6 +512,7 @@ article section.docstring a.source-link {
         -webkit-transition-timing-function: ease-out; /* Safari */
         transition-timing-function: ease-out;
         z-index: 2;
+        box-shadow: 5px 0px 5px 0px rgb(210,210,210);
     }
 
     nav.toc.show {
@@ -532,7 +560,6 @@ article section.docstring a.source-link {
     }
 
     article > header div#topbar span {
-        position: fixed;
         width: 80%;
         height: 1.5em;
         margin-top: -0.1em;
